@@ -281,16 +281,26 @@ even if consumable resources are enabled
 (e.g. \fBSelectType=select/cons_res\fR).
 
 .TP
-\fB\-\-get\-user\-env\fR[=\fItimeout\fR]
+\fB\-\-get\-user\-env\fR[=\fItimeout\fR][\fImode\fR]
 For a batch script submission, this option will tell srun to retrieve the
-login environment variables for the user specified in the \-\-uid option.
-The environment variables are retrieved by running "su - <username> -c
-/usr/bin/env" and parsing the output.  Be aware that any environment
-variables already set in srun's environment will take precedence over any
-environment variables in the user's login environment.
-Optional timeout value is in seconds. Default value is 8 seconds.
+login environment variables for the user specified in the \fB\-\-uid\fR option.
+The environment variables are retrieved by running something of this sort
+"su - <username> -c /usr/bin/env" and parsing the output.  
+Be aware that any environment variables already set in srun's environment 
+will take precedence over any environment variables in the user's 
+login environment.
+The optional \fItimeout\fR value is in seconds. Default value is 8 seconds.
+The optional \fImode\fR value control the "su" options.
+With a \fImode\fR value of "S", "su" is executed without the "\-" option.
+With a \fImode\fR value of "L", "su" is executed with the "\-" option,
+replicating the login environment.
+If \fImode\fR not specified, the mode established at SLURM build time 
+is used.
+Example of use include "\-\-get\-user\-env", "\-\-get\-user\-env=10"
+"\-\-get\-user\-env=10L", and "\-\-get\-user\-env=S".
 NOTE: This option only works if the caller has an
-effective uid of "root", and only takes effect in batch mode (\-b/\-\-batch).
+effective uid of "root", and only takes effect in batch mode 
+(\fB\-b\fR/\fB\-\-batch\fR).  
 This option was originally created for use by Moab.
 
 .TP
