@@ -194,12 +194,13 @@ static int fill_job_desc_from_opts(job_desc_msg_t *desc)
 	desc->shared = opt.shared;
 
 	desc->environment = NULL;
-	if (opt.get_user_env >= 0) {
+	if (opt.get_user_env_time >= 0) {
 		struct passwd *pw = NULL;
 		pw = getpwuid(opt.uid);
 		if (pw != NULL) {
 			desc->environment = env_array_user_default(pw->pw_name,
-						opt.get_user_env);
+						opt.get_user_env_time,
+						opt.get_user_env_mode);
 			/* FIXME - should we abort if j->environment
 			 * is NULL? */
 		}
