@@ -193,8 +193,8 @@ static void _opt_default(void);
 
 /* set options based upon env vars  */
 static void _opt_env(void);
-
 static void _opt_args(int argc, char **argv);
+static void _proc_get_user_env(char *optarg);
 
 /* list known options and their settings  */
 static void  _opt_list(void);
@@ -1045,7 +1045,8 @@ static void _opt_default()
 		opt.msg_timeout     = 15;
 	}
 	
-	opt.get_user_env = -1;
+	opt.get_user_env_time = -1;
+	opt.get_user_env_mode = -1;
 }
 
 /*---[ env var processing ]-----------------------------------------------*/
@@ -2006,9 +2007,9 @@ void set_options(const int argc, char **argv, int first)
 			break;
 		case LONG_OPT_GET_USER_ENV:
 			if (optarg)
-				opt.get_user_env = strtol(optarg, NULL, 10);
+				_proc_get_user_env(optarg);
 			else
-				opt.get_user_env = 0;
+				opt.get_user_env_time = 0;
 			break;
 		default:
 			if (spank_process_option (opt_char, optarg) < 0) {
@@ -2025,6 +2026,23 @@ void set_options(const int argc, char **argv, int first)
 	}
 
 	spank_option_table_destroy (optz);
+}
+
+static void _proc_get_user_env(char *optarg)
+{
+	char *end_ptr;
+
+	if ((optarg[0] >= '0') && (optarg[0] <= '9'))
+		opt.get_user_env_time = strtol(optarg, &end_ptr, 10);
+	else
+		opt.get_user_env_time = 0;
+ 
+	if ((end_ptr == NULL) || (end_ptr[0] == '\0'))
+		return;
+	if      ((end_ptr[0] == 's') || (end_ptr[0] == 'S'))
+		opt.get_user_env_mode = 1;
+	else if ((end_ptr[0] == 'l') || (end_ptr[0] == 'L'))
+		opt.get_user_env_mode = 2;
 }
 
 /* Load the multi_prog config file into argv, pass the  entire file contents 
