@@ -212,7 +212,8 @@ typedef struct srun_options {
 	uint16_t mail_type;	/* --mail-type			*/
 	char *mail_user;	/* --mail-user			*/
 	char *ctrl_comm_ifhn;	/* --ctrl-comm-ifhn		*/
-	int get_user_env;	/* --get-user-env[=secs]	*/
+	int get_user_env_time;	/* --get-user-env[=secs]	*/
+	int get_user_env_mode;	/* --get-user-env=[S|L]		*/
 } opt_t;
 
 extern opt_t opt;
